--- a/index.html
+++ b/index.html
@@ -15,68 +15,89 @@
     />
   </head>
   <body class="font-nunito">
-    <!-- Header -->
-    <header class="bg-white shadow-md fixed w-full top-0 z-50">
+    <!-- Top Contact Bar -->
+    <div class="bg-blue-600 text-white py-2 fixed w-full top-0 z-50">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div
+          class="flex flex-col md:flex-row justify-between items-center text-sm"
+        >
+          <!-- Address -->
+          <div class="flex items-center mb-2 md:mb-0">
+            <div
+              class="w-6 h-6 bg-purple-600 rounded flex items-center justify-center mr-2"
+            >
+              <i class="fas fa-map-marker-alt text-white text-xs"></i>
+            </div>
+            <span>198 West 21th Street, Suite 721 New York NY 10016</span>
+          </div>
+
+          <!-- Email -->
+          <div class="flex items-center mb-2 md:mb-0">
+            <div
+              class="w-6 h-6 bg-orange-500 rounded-full flex items-center justify-center mr-2"
+            >
+              <i class="fas fa-paper-plane text-white text-xs"></i>
+            </div>
+            <span>youremail@email.com</span>
+          </div>
+
+          <!-- Phone -->
+          <div class="flex items-center">
+            <div
+              class="w-6 h-6 bg-green-500 rounded-full flex items-center justify-center mr-2"
+            >
+              <i class="fas fa-phone text-white text-xs"></i>
+            </div>
+            <span>+ 1235 2355 98</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Main Navigation Header -->
+    <header class="bg-white shadow-md fixed w-full top-10 z-40">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center py-4">
           <!-- Logo -->
           <div class="flex items-center">
-            <img
-              src="https://via.placeholder.com/150x50/ec4899/ffffff?text=KIDDOS"
-              alt="Kiddos"
-              class="h-10 w-auto"
-            />
+            <h1 class="text-3xl font-bold text-gray-900">Kiddos</h1>
           </div>
 
           <!-- Navigation -->
           <nav class="hidden md:flex space-x-8">
-            <a href="#" class="text-pink-600 font-semibold">Home</a>
+            <a href="#" class="text-blue-600 font-semibold">Home</a>
             <a
               href="#about"
-              class="text-gray-700 hover:text-pink-600 transition"
+              class="text-gray-700 hover:text-blue-600 transition"
               >About</a
             >
             <a
-              href="#services"
-              class="text-gray-700 hover:text-pink-600 transition"
-              >Services</a
+              href="#teachers"
+              class="text-gray-700 hover:text-blue-600 transition"
+              >Teacher</a
             >
             <a
               href="#classes"
-              class="text-gray-700 hover:text-pink-600 transition"
-              >Classes</a
-            >
-            <a
-              href="#teachers"
-              class="text-gray-700 hover:text-pink-600 transition"
-              >Teachers</a
+              class="text-gray-700 hover:text-blue-600 transition"
+              >Courses</a
             >
             <a
               href="#pricing"
-              class="text-gray-700 hover:text-pink-600 transition"
+              class="text-gray-700 hover:text-blue-600 transition"
               >Pricing</a
             >
-            <a href="#blog" class="text-gray-700 hover:text-pink-600 transition"
+            <a href="#blog" class="text-gray-700 hover:text-blue-600 transition"
               >Blog</a
             >
             <a
               href="#contact"
-              class="text-gray-700 hover:text-pink-600 transition"
+              class="text-gray-700 hover:text-blue-600 transition"
               >Contact</a
             >
           </nav>
 
-          <!-- CTA Button -->
-          <div class="hidden md:block">
-            <a
-              href="#contact"
-              class="bg-pink-600 text-white px-6 py-2 rounded-full hover:bg-pink-700 transition"
-              >Get Started</a
-            >
-          </div>
-
           <!-- Mobile menu button -->
-          <button class="md:hidden text-pink-600">
+          <button class="md:hidden text-blue-600">
             <i class="fas fa-bars text-xl"></i>
           </button>
         </div>
@@ -84,7 +105,7 @@
     </header>
 
     <!-- Hero Slider Section -->
-    <section class="pt-20 relative overflow-hidden">
+    <section class="pt-32 relative overflow-hidden">
       <div class="hero-slider">
         <!-- Slide 1 -->
         <div class="slide active bg-gradient-to-br from-pink-50 to-purple-50">
