--- a/sami/index.html
+++ b/sami/index.html
@@ -13,8 +13,39 @@
 
 <body class="font-nunito">
 
+    <!-- Top Contact Bar -->
+  <div class="bg-blue-600 text-white py-2">
+    <div class="holder">
+      <div class="flex flex-col md:flex-row justify-between items-center text-sm">
+        <!-- Address -->
+        <div class="flex items-center mb-2 md:mb-0">
+          <div class="w-6 h-6 bg-purple-600 rounded flex items-center justify-center mr-2">
+            <i class="fas fa-map-marker-alt text-white text-xs"></i>
+          </div>
+          <span>198 West 21th Street, Suite 721 New York NY 10016</span>
+        </div>
+
+        <!-- Email -->
+        <div class="flex items-center mb-2 md:mb-0">
+          <div class="w-6 h-6 bg-orange-500 rounded-full flex items-center justify-center mr-2">
+            <i class="fas fa-paper-plane text-white text-xs"></i>
+          </div>
+          <span>youremail@email.com</span>
+        </div>
+
+        <!-- Phone -->
+        <div class="flex items-center">
+          <div class="w-6 h-6 bg-green-500 rounded-full flex items-center justify-center mr-2">
+            <i class="fas fa-phone text-white text-xs"></i>
+          </div>
+          <span>+ 1235 2355 98</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Main Navigation Header -->
-  <header class="bg-black md:bg-white shadow-md fixed w-full top-0 z-40">
+  <header class="bg-black md:bg-white shadow-md">
     <div class="holder">
       <div class="flex justify-between items-center py-2 md:py-4">
         <!-- Logo -->
