--- a/sami/index.html
+++ b/sami/index.html
@@ -2,95 +2,193 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kiddos - Kids School Website Template</title>
-  <link href="/dist/output.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kiddos - Kids School Website Template</title>
+    <link href="/dist/output.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 
 </head>
 
 <body class="font-nunito">
 
     <!-- Top Contact Bar -->
-  <div class="bg-blue-600 text-white py-2">
-    <div class="holder">
-      <div class="flex flex-col md:flex-row justify-between items-center text-sm">
-        <!-- Address -->
-        <div class="flex items-center mb-2 md:mb-0">
-          <div class="w-6 h-6 bg-purple-600 rounded flex items-center justify-center mr-2">
-            <i class="fas fa-map-marker-alt text-white text-xs"></i>
-          </div>
-          <span>198 West 21th Street, Suite 721 New York NY 10016</span>
+    <div class="bg-blue-600 text-white py-2">
+        <div class="holder">
+            <div class="flex flex-col md:flex-row justify-between items-center text-sm">
+                <!-- Address -->
+                <div class="flex items-center mb-2 md:mb-0">
+                    <div class="w-6 h-6 bg-purple-600 rounded flex items-center justify-center mr-2">
+                        <i class="fas fa-map-marker-alt text-white text-xs"></i>
+                    </div>
+                    <span>198 West 21th Street, Suite 721 New York NY 10016</span>
+                </div>
+
+                <!-- Email -->
+                <div class="flex items-center mb-2 md:mb-0">
+                    <div class="w-6 h-6 bg-orange-500 rounded-full flex items-center justify-center mr-2">
+                        <i class="fas fa-paper-plane text-white text-xs"></i>
+                    </div>
+                    <span>youremail@email.com</span>
+                </div>
+
+                <!-- Phone -->
+                <div class="flex items-center">
+                    <div class="w-6 h-6 bg-green-500 rounded-full flex items-center justify-center mr-2">
+                        <i class="fas fa-phone text-white text-xs"></i>
+                    </div>
+                    <span>+ 1235 2355 98</span>
+                </div>
+            </div>
         </div>
-
-        <!-- Email -->
-        <div class="flex items-center mb-2 md:mb-0">
-          <div class="w-6 h-6 bg-orange-500 rounded-full flex items-center justify-center mr-2">
-            <i class="fas fa-paper-plane text-white text-xs"></i>
-          </div>
-          <span>youremail@email.com</span>
-        </div>
-
-        <!-- Phone -->
-        <div class="flex items-center">
-          <div class="w-6 h-6 bg-green-500 rounded-full flex items-center justify-center mr-2">
-            <i class="fas fa-phone text-white text-xs"></i>
-          </div>
-          <span>+ 1235 2355 98</span>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Main Navigation Header -->
-  <header class="bg-black md:bg-white shadow-md">
-    <div class="holder">
-      <div class="flex justify-between items-center py-2 md:py-4">
-        <!-- Logo -->
-        <div class="flex items-center">
-          <h1 class="text-3xl font-bold text-gray-900">
-            <img src="/assets/image/logo.png" alt="logo" class="md:h-20 h-12 md:w-20 w-12 object-cover ">
-          </h1>
-        </div>
-
-        <!-- Navigation (Desktop) -->
-        <nav class="hidden md:flex space-x-8">
-          <a href="#" class="text-blue-600 font-semibold">Home</a>
-          <a href="#about" class="text-gray-700 hover:text-blue-600 transition">About</a>
-          <a href="#teachers" class="text-gray-700 hover:text-blue-600 transition">Teacher</a>
-          <a href="#classes" class="text-gray-700 hover:text-blue-600 transition">Courses</a>
-          <a href="#pricing" class="text-gray-700 hover:text-blue-600 transition">Pricing</a>
-          <a href="#blog" class="text-gray-700 hover:text-blue-600 transition">Blog</a>
-          <a href="#contact" class="text-gray-700 hover:text-blue-600 transition">Contact</a>
-        </nav>
-
-        <!-- Mobile menu button -->
-        <button id="menu-btn" class="md:hidden text-[#6c757d] text-xl focus:outline-none flex justify-center items-center gap-3">
-          <i class="fas fa-bars text-2xl"></i>
-          Menu
-        </button>
-      </div>
     </div>
 
-    <!-- Mobile Menu -->
-    <div id="mobile-menu" class="md:hidden bg-black shadow-md">
-      <nav class="flex flex-col space-y-4 px-6 py-4">
-        <a href="#" class="text-blue-600 font-semibold">Home</a>
-        <a href="#about" class="text-white hover:text-blue-600 transition">About</a>
-        <a href="#teachers" class="text-white hover:text-blue-600 transition">Teacher</a>
-        <a href="#classes" class="text-white hover:text-blue-600 transition">Courses</a>
-        <a href="#pricing" class="text-white hover:text-blue-600 transition">Pricing</a>
-        <a href="#blog" class="text-white hover:text-blue-600 transition">Blog</a>
-        <a href="#contact" class="text-white hover:text-blue-600 transition">Contact</a>
-      </nav>
-    </div>
-  </header>
+    <!-- Main Navigation Header -->
+    <header class="bg-black md:bg-white shadow-md">
+        <div class="holder">
+            <div class="flex justify-between items-center py-2 md:py-4">
+                <!-- Logo -->
+                <div class="flex items-center">
+                    <h1 class="text-3xl font-bold text-gray-900">
+                        <img src="/assets/image/logo.png" alt="logo" class="md:h-20 h-12 md:w-20 w-12 object-cover ">
+                    </h1>
+                </div>
 
-  <script src="/assets/js/main.js">
-   
-  </script>
+                <!-- Navigation (Desktop) -->
+                <nav class="hidden md:flex space-x-8">
+                    <a href="#" class="text-blue-600 font-semibold">Home</a>
+                    <a href="#about" class="text-gray-700 hover:text-blue-600 transition">About</a>
+                    <a href="#teachers" class="text-gray-700 hover:text-blue-600 transition">Teacher</a>
+                    <a href="#classes" class="text-gray-700 hover:text-blue-600 transition">Courses</a>
+                    <a href="#pricing" class="text-gray-700 hover:text-blue-600 transition">Pricing</a>
+                    <a href="#blog" class="text-gray-700 hover:text-blue-600 transition">Blog</a>
+                    <a href="#contact" class="text-gray-700 hover:text-blue-600 transition">Contact</a>
+                </nav>
+
+                <!-- Mobile menu button -->
+                <button id="menu-btn"
+                    class="md:hidden text-[#6c757d] text-xl focus:outline-none flex justify-center items-center gap-3">
+                    <i class="fas fa-bars text-2xl"></i>
+                    Menu
+                </button>
+            </div>
+        </div>
+
+        <!-- Mobile Menu -->
+        <div id="mobile-menu" class="md:hidden bg-black shadow-md">
+            <nav class="flex flex-col space-y-4 px-6 py-4">
+                <a href="#" class="text-blue-600 font-semibold">Home</a>
+                <a href="#about" class="text-white hover:text-blue-600 transition">About</a>
+                <a href="#teachers" class="text-white hover:text-blue-600 transition">Teacher</a>
+                <a href="#classes" class="text-white hover:text-blue-600 transition">Courses</a>
+                <a href="#pricing" class="text-white hover:text-blue-600 transition">Pricing</a>
+                <a href="#blog" class="text-white hover:text-blue-600 transition">Blog</a>
+                <a href="#contact" class="text-white hover:text-blue-600 transition">Contact</a>
+            </nav>
+        </div>
+    </header>
+
+    <section class="relative bg-[url('/assets/image/bg_3.jpg')] bg-cover bg-center bg-fixed h-[375px]">
+        <!-- Overlay -->
+        <div class="absolute inset-0 bg-black/50"></div>
+
+        <div class="holder h-full flex items-center justify-center relative z-10">
+            <div class="grid md:grid-cols-4 items-center text-white gap-6">
+                <!-- Text -->
+                <div class="col-span-3 [&>p]:text-white/80 [&>p]:text-base/[29px] [&>p]:font-normal text-left [&>p]:pt-4 ">
+                    <h2 class="text-4xl/6 font-medium">
+                        Teaching Your Child Some Good Manners
+                    </h2>
+                    <p>
+                        A small river named Duden flows by their place and supplies it with the
+                        necessary regelialia. It is a paradisematic country, in which roasted
+                        parts of sentences fly into your mouth.
+                    </p>
+                </div>
+
+                <!-- Button -->
+                <div class="col-span-1 flex justify-center">
+                    <a href="#"
+                        class="inline-block bg-yellow-600 hover:bg-yellow-700 text-white font-medium px-6 py-3 rounded-lg shadow-md transition">
+                        Take a Course
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="py-16 bg-gray-50">
+        <div class="holder">
+            <!-- Heading -->
+            <div class="text-center mb-12">
+                <h2 class="text-4xl font-bold">
+                    <span class="text-purple-600">Certified</span>
+                    <span class="text-orange-500">Teachers</span>
+                </h2>
+            </div>
+
+            <!-- Teachers Grid -->
+            <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-4">
+
+                <!-- Teacher Card -->
+                <div class="bg-white overflow-hidden">
+                    <img src="/assets/image/teacher-1.jpg" alt="Bianca Wilson" class="w-full h-80 object-cover">
+                    <div class="p-6 text-center">
+                        <h3 class="text-xl font-semibold text-gray-800">Bianca Wilson</h3>
+                        <p class="text-gray-400 uppercase text-sm tracking-wide">Teacher</p>
+                        <p class="mt-3 text-gray-600 text-sm leading-relaxed">
+                            I am an ambitious workaholic, but apart from that, pretty simple person.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Teacher Card -->
+                <div class="bg-white overflow-hidden">
+                    <img src="/assets/image/teacher-2.jpg" alt="Mitch Parker" class="w-full h-80 object-cover">
+                    <div class="p-6 text-center">
+                        <h3 class="text-xl font-semibold text-gray-800">Mitch Parker</h3>
+                        <p class="text-gray-400 uppercase text-sm tracking-wide">English Teacher</p>
+                        <p class="mt-3 text-gray-600 text-sm leading-relaxed">
+                            I am an ambitious workaholic, but apart from that, pretty simple person.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Teacher Card -->
+                <div class="bg-white overflow-hidden">
+                    <img src="/assets/image/teacher-3.jpg" alt="Stella Smith" class="w-full h-80 object-cover">
+                    <div class="p-6 text-center">
+                        <h3 class="text-xl font-semibold text-gray-800">Stella Smith</h3>
+                        <p class="text-gray-400 uppercase text-sm tracking-wide">Art Teacher</p>
+                        <p class="mt-3 text-gray-600 text-sm leading-relaxed">
+                            I am an ambitious workaholic, but apart from that, pretty simple person.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Teacher Card -->
+                <div class="bg-white overflow-hidden">
+                    <img src="/assets/image/teacher-4.jpg" alt="Monshe Henderson" class="w-full h-80 object-cover">
+                    <div class="p-6 text-center">
+                        <h3 class="text-xl font-semibold text-gray-800">Monshe Henderson</h3>
+                        <p class="text-gray-400 uppercase text-sm tracking-wide">Science Teacher</p>
+                        <p class="mt-3 text-gray-600 text-sm leading-relaxed">
+                            I am an ambitious workaholic, but apart from that, pretty simple person.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+
+    <script src="/assets/js/main.js">
+
+    </script>
 
 </body>
+
 </html>
