--- a/sami/index.html
+++ b/sami/index.html
@@ -67,9 +67,9 @@
 
                 <!-- Mobile menu button -->
                 <button id="menu-btn"
-                    class="md:hidden text-[#6c757d] text-xl focus:outline-none flex justify-center items-center gap-3">
+                    class="md:hidden text-[#6c757d] text-2xl focus:outline-none flex justify-center items-center gap-3">
                     <i class="fas fa-bars text-2xl"></i>
-                    Menu
+                    
                 </button>
             </div>
         </div>
@@ -96,7 +96,7 @@
             <div class="grid md:grid-cols-4 items-center text-white gap-6">
                 <!-- Text -->
                 <div class="col-span-3 [&>p]:text-white/80 [&>p]:text-base/[29px] [&>p]:font-normal text-left [&>p]:pt-4 ">
-                    <h2 class="text-4xl/6 font-medium">
+                    <h2 class="text-4xl/6 font-medium leading-[117%]">
                         Teaching Your Child Some Good Manners
                     </h2>
                     <p>
@@ -121,11 +121,12 @@
     <section class="py-16 bg-gray-50">
         <div class="holder">
             <!-- Heading -->
-            <div class="text-center mb-12">
+            <div class="text-center mb-12 [&>p]:text-[#abb8c3] [&>p]:text-base/[29px] [&>p]:font-normal [&>p]:max-w-[700px] [&>p]:mx-auto [&>p]:mt-4">
                 <h2 class="text-4xl font-bold">
                     <span class="text-purple-600">Certified</span>
                     <span class="text-orange-500">Teachers</span>
                 </h2>
+                <p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
             </div>
 
             <!-- Teachers Grid -->
@@ -133,11 +134,11 @@
 
                 <!-- Teacher Card -->
                 <div class="bg-white overflow-hidden">
-                    <img src="/assets/image/teacher-1.jpg" alt="Bianca Wilson" class="w-full h-80 object-cover">
+                    <img src="/assets/image/bg_3.jpg" alt="Bianca Wilson" class="w-full h-80 object-cover">
                     <div class="p-6 text-center">
-                        <h3 class="text-xl font-semibold text-gray-800">Bianca Wilson</h3>
+                        <h3 class="text-2xl font-semibold text-gray-800">Bianca Wilson</h3>
                         <p class="text-gray-400 uppercase text-sm tracking-wide">Teacher</p>
-                        <p class="mt-3 text-gray-600 text-sm leading-relaxed">
+                        <p class="mt-3 text-gray-600 text-sm">
                             I am an ambitious workaholic, but apart from that, pretty simple person.
                         </p>
                     </div>
@@ -145,11 +146,11 @@
 
                 <!-- Teacher Card -->
                 <div class="bg-white overflow-hidden">
-                    <img src="/assets/image/teacher-2.jpg" alt="Mitch Parker" class="w-full h-80 object-cover">
+                    <img src="/assets/image/bg_3.jpg" alt="Mitch Parker" class="w-full h-80 object-cover">
                     <div class="p-6 text-center">
-                        <h3 class="text-xl font-semibold text-gray-800">Mitch Parker</h3>
+                        <h3 class="text-2xl font-semibold text-gray-800">Mitch Parker</h3>
                         <p class="text-gray-400 uppercase text-sm tracking-wide">English Teacher</p>
-                        <p class="mt-3 text-gray-600 text-sm leading-relaxed">
+                        <p class="mt-3 text-gray-600 text-sm">
                             I am an ambitious workaholic, but apart from that, pretty simple person.
                         </p>
                     </div>
@@ -157,11 +158,11 @@
 
                 <!-- Teacher Card -->
                 <div class="bg-white overflow-hidden">
-                    <img src="/assets/image/teacher-3.jpg" alt="Stella Smith" class="w-full h-80 object-cover">
+                    <img src="/assets/image/bg_3.jpg" alt="Stella Smith" class="w-full h-80 object-cover">
                     <div class="p-6 text-center">
-                        <h3 class="text-xl font-semibold text-gray-800">Stella Smith</h3>
+                        <h3 class="text-2xl font-semibold text-gray-800">Stella Smith</h3>
                         <p class="text-gray-400 uppercase text-sm tracking-wide">Art Teacher</p>
-                        <p class="mt-3 text-gray-600 text-sm leading-relaxed">
+                        <p class="mt-3 text-gray-600 text-sm">
                             I am an ambitious workaholic, but apart from that, pretty simple person.
                         </p>
                     </div>
@@ -169,11 +170,11 @@
 
                 <!-- Teacher Card -->
                 <div class="bg-white overflow-hidden">
-                    <img src="/assets/image/teacher-4.jpg" alt="Monshe Henderson" class="w-full h-80 object-cover">
+                    <img src="/assets/image/bg_3.jpg" alt="Monshe Henderson" class="w-full h-80 object-cover">
                     <div class="p-6 text-center">
-                        <h3 class="text-xl font-semibold text-gray-800">Monshe Henderson</h3>
+                        <h3 class="text-2xl font-semibold text-gray-800">Monshe Henderson</h3>
                         <p class="text-gray-400 uppercase text-sm tracking-wide">Science Teacher</p>
-                        <p class="mt-3 text-gray-600 text-sm leading-relaxed">
+                        <p class="mt-3 text-gray-600 text-sm">
                             I am an ambitious workaholic, but apart from that, pretty simple person.
                         </p>
                     </div>
