counter block added

--- a/sami/index.html
+++ b/sami/index.html
@@ -69,7 +69,7 @@
                 <button id="menu-btn"
                     class="md:hidden text-[#6c757d] text-2xl focus:outline-none flex justify-center items-center gap-3">
                     <i class="fas fa-bars text-2xl"></i>
-                    
+
                 </button>
             </div>
         </div>
@@ -95,7 +95,8 @@
         <div class="holder h-full flex items-center justify-center relative z-10">
             <div class="grid md:grid-cols-4 items-center text-white gap-6">
                 <!-- Text -->
-                <div class="col-span-3 [&>p]:text-white/80 [&>p]:text-base/[29px] [&>p]:font-normal text-left [&>p]:pt-4 ">
+                <div
+                    class="col-span-3 [&>p]:text-white/80 [&>p]:text-base/[29px] [&>p]:font-normal text-left [&>p]:pt-4 ">
                     <h2 class="text-4xl/6 font-medium leading-[117%]">
                         Teaching Your Child Some Good Manners
                     </h2>
@@ -121,12 +122,14 @@
     <section class="py-16 bg-gray-50">
         <div class="holder">
             <!-- Heading -->
-            <div class="text-center mb-12 [&>p]:text-[#abb8c3] [&>p]:text-base/[29px] [&>p]:font-normal [&>p]:max-w-[700px] [&>p]:mx-auto [&>p]:mt-4">
+            <div
+                class="text-center mb-12 [&>p]:text-[#abb8c3] [&>p]:text-base/[29px] [&>p]:font-normal [&>p]:max-w-[700px] [&>p]:mx-auto [&>p]:mt-4">
                 <h2 class="text-4xl font-bold">
                     <span class="text-purple-600">Certified</span>
                     <span class="text-orange-500">Teachers</span>
                 </h2>
-                <p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
+                <p>Separated they live in. A small river named Duden flows by their place and supplies it with the
+                    necessary regelialia. It is a paradisematic country</p>
             </div>
 
             <!-- Teachers Grid -->
@@ -137,7 +140,7 @@
                     <img src="/assets/image/bg_3.jpg" alt="Bianca Wilson" class="w-full h-80 object-cover">
                     <div class="p-6 text-center">
                         <h3 class="text-2xl font-semibold text-gray-800">Bianca Wilson</h3>
-                        <p class="text-gray-400 uppercase text-sm tracking-wide">Teacher</p>
+                        <h4 class="text-gray-400 uppercase text-sm tracking-wide">Teacher</h4>
                         <p class="mt-3 text-gray-600 text-sm">
                             I am an ambitious workaholic, but apart from that, pretty simple person.
                         </p>
@@ -149,7 +152,7 @@
                     <img src="/assets/image/bg_3.jpg" alt="Mitch Parker" class="w-full h-80 object-cover">
                     <div class="p-6 text-center">
                         <h3 class="text-2xl font-semibold text-gray-800">Mitch Parker</h3>
-                        <p class="text-gray-400 uppercase text-sm tracking-wide">English Teacher</p>
+                        <h4 class="text-gray-400 uppercase text-sm tracking-wide">English Teacher</h4>
                         <p class="mt-3 text-gray-600 text-sm">
                             I am an ambitious workaholic, but apart from that, pretty simple person.
                         </p>
@@ -161,7 +164,7 @@
                     <img src="/assets/image/bg_3.jpg" alt="Stella Smith" class="w-full h-80 object-cover">
                     <div class="p-6 text-center">
                         <h3 class="text-2xl font-semibold text-gray-800">Stella Smith</h3>
-                        <p class="text-gray-400 uppercase text-sm tracking-wide">Art Teacher</p>
+                        <h4 class="text-gray-400 uppercase text-sm tracking-wide">Art Teacher</h4>
                         <p class="mt-3 text-gray-600 text-sm">
                             I am an ambitious workaholic, but apart from that, pretty simple person.
                         </p>
@@ -173,7 +176,7 @@
                     <img src="/assets/image/bg_3.jpg" alt="Monshe Henderson" class="w-full h-80 object-cover">
                     <div class="p-6 text-center">
                         <h3 class="text-2xl font-semibold text-gray-800">Monshe Henderson</h3>
-                        <p class="text-gray-400 uppercase text-sm tracking-wide">Science Teacher</p>
+                        <h4 class="text-gray-400 uppercase text-sm tracking-wide">Science Teacher</h4>
                         <p class="mt-3 text-gray-600 text-sm">
                             I am an ambitious workaholic, but apart from that, pretty simple person.
                         </p>
@@ -184,6 +187,112 @@
         </div>
     </section>
 
+    <section
+        class="bg-[url('/assets/image/bg_2.webp')] bg-cover bg-center bg-fixed md:h-[576px] text-black flex items-center justify-center">
+        <div class="holder z-10 relative w-full h-full flex flex-col items-center justify-center text-center py-16">
+            <div class="[&>p]:text-lg [&>p]:text-gray-600 [&>p]:mb-8 [&>p]:max-w-[692px] mb-12">
+                <h2 class="text-[28px]/[42px] md:text-[44px]/[66px] font-bold text-[#0003ac] mb-6">20 Years of Experience</h2>
+                <p >
+                    Separated they live in. A small river named Duden flows by their place and supplies it with the
+                    necessary regelialia. It is a paradisematic country.
+                </p>
+            </div>
+            <!-- Counter Cards -->
+            <div class="grid md:grid-cols-4 gap-4 w-full max-w-4xl">
+                <!-- Certified Teachers -->
+                <div class="counter-card p-6 text-center">
+                    <div class="text-[50px]/[90px] font-medium text-[#0003ac] mb-2" id="teachers-counter">0</div>
+                    <div class="text-base leading-[29px] font-normal">Certified Teachers</div>
+                </div>
+                <!-- Successful Kids -->
+                <div class="counter-card p-6 text-center">
+                    <div class="text-[50px]/[90px] font-medium text-[#0003ac] mb-2" id="kids-counter">0</div>
+                    <div class="text-base leading-[29px] font-normal">Successful Kids</div>
+                </div>
+                <!-- Happy Parents -->
+                <div class="counter-card p-6 text-center">
+                    <div class="text-[50px]/[90px] font-medium text-[#0003ac] mb-2" id="parents-counter">0</div>
+                    <div class="text-base leading-[29px] font-normal">Happy Parents</div>
+                </div>
+                <!-- Awards Won -->
+                <div class="counter-card p-6 text-center">
+                    <div class="text-[50px]/[90px] font-medium text-[#0003ac] mb-2" id="awards-counter">0</div>
+                    <div class="text-base leading-[29px] font-normal">Awards Won</div>
+                </div>
+            </div>
+        </div>
+    </section>
+ß
+
+
+
+    <section class="py-16 bg-gray-50">
+        <div class="holder">
+            <!-- Heading -->
+            <div
+                class="text-center mb-12 [&>p]:text-[#abb8c3] [&>p]:text-base/[29px] [&>p]:font-normal [&>p]:max-w-[700px] [&>p]:mx-auto [&>p]:mt-4">
+                <h2 class="text-4xl font-bold">
+                    <span class="text-purple-600">Certified</span>
+                    <span class="text-orange-500">Teachers</span>
+                </h2>
+                <p>Separated they live in. A small river named Duden flows by their place and supplies it with the
+                    necessary regelialia. It is a paradisematic country</p>
+            </div>
+
+            <!-- Teachers Grid -->
+            <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-4">
+
+                <!-- Teacher Card -->
+                <div class="bg-white overflow-hidden">
+                    <img src="/assets/image/bg_3.jpg" alt="Bianca Wilson" class="w-full h-80 object-cover">
+                    <div class="p-6 text-center">
+                        <h3 class="text-2xl font-semibold text-gray-800">Bianca Wilson</h3>
+                        <h4 class="text-gray-400 uppercase text-sm tracking-wide">Teacher</h4>
+                        <p class="mt-3 text-gray-600 text-sm">
+                            I am an ambitious workaholic, but apart from that, pretty simple person.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Teacher Card -->
+                <div class="bg-white overflow-hidden">
+                    <img src="/assets/image/bg_3.jpg" alt="Mitch Parker" class="w-full h-80 object-cover">
+                    <div class="p-6 text-center">
+                        <h3 class="text-2xl font-semibold text-gray-800">Mitch Parker</h3>
+                        <h4 class="text-gray-400 uppercase text-sm tracking-wide">English Teacher</h4>
+                        <p class="mt-3 text-gray-600 text-sm">
+                            I am an ambitious workaholic, but apart from that, pretty simple person.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Teacher Card -->
+                <div class="bg-white overflow-hidden">
+                    <img src="/assets/image/bg_3.jpg" alt="Stella Smith" class="w-full h-80 object-cover">
+                    <div class="p-6 text-center">
+                        <h3 class="text-2xl font-semibold text-gray-800">Stella Smith</h3>
+                        <h4 class="text-gray-400 uppercase text-sm tracking-wide">Art Teacher</h4>
+                        <p class="mt-3 text-gray-600 text-sm">
+                            I am an ambitious workaholic, but apart from that, pretty simple person.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Teacher Card -->
+                <div class="bg-white overflow-hidden">
+                    <img src="/assets/image/bg_3.jpg" alt="Monshe Henderson" class="w-full h-80 object-cover">
+                    <div class="p-6 text-center">
+                        <h3 class="text-2xl font-semibold text-gray-800">Monshe Henderson</h3>
+                        <h4 class="text-gray-400 uppercase text-sm tracking-wide">Science Teacher</h4>
+                        <p class="mt-3 text-gray-600 text-sm">
+                            I am an ambitious workaholic, but apart from that, pretty simple person.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>ßß
 
 
     <script src="/assets/js/main.js">
