--- a/afzal/index.html
+++ b/afzal/index.html
@@ -159,10 +159,10 @@
     <section>Gallery section</section>
 
     <!-- Footer -->
-    <footer class="bg-white dark:bg-gray-900">
+    <footer class="bg-blue-600">
         <div class="mx-auto max-w-screen-xl px-4 pt-16 pb-8 sm:px-6 lg:px-8">
             <div class="mx-auto max-w-md">
-                <strong class="block text-center text-xl font-bold text-gray-900 sm:text-3xl dark:text-white">
+                <strong class="block text-center font-bold text-3xl text-white sm:text-3xl">
                     Want us to email you with the latest blockbuster news?
                 </strong>
 
@@ -170,28 +170,27 @@
                     <div class="relative max-w-lg">
                         <label class="sr-only" for="email"> Email </label>
 
-                        <input
-                            class="w-full rounded-full border-gray-200 bg-gray-100 p-4 pe-32 text-sm font-medium dark:border-gray-700 dark:bg-gray-800 dark:text-white"
-                            id="email" type="email" placeholder="john@doe.com" />
+                        <input class="w-full rounded-full border-gray-200 bg-gray-100 p-4 pe-32 text-sm font-medium"
+                            id="email" type="email" placeholder="blessingchildspecialschool@gmail.com" />
 
                         <button
-                            class="absolute end-1 top-1/2 -translate-y-1/2 rounded-full bg-blue-600 px-5 py-3 text-sm font-medium text-white transition hover:bg-blue-700">
-                            Subscribe
+                            class="absolute end-1 top-1/2 -translate-y-1/2 rounded-full bg-blue-600 px-5 py-3 text-lg/leading-none font-medium text-white transition hover:bg-blue-700">
+                            Submit
                         </button>
                     </div>
                 </form>
             </div>
 
-            <div class="mt-16 grid grid-cols-1 gap-8 lg:grid-cols-2 lg:gap-32">
-                <div class="mx-auto max-w-sm lg:max-w-none">
-                    <p class="mt-4 text-center text-gray-500 lg:text-left lg:text-lg dark:text-gray-400">
+            <div class="mt-14 grid grid-cols-1 gap-8 lg:grid-cols-2 lg:gap-32">
+
+                <div class="mx-auto max-w-sm lg:max-w-none ">
+                    <p class="mt-4 text-center text-white/90 lg:text-left lg:text-lg">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium natus quod eveniet
                         aut perferendis distinctio iusto repudiandae, provident velit earum?
                     </p>
 
                     <div class="mt-6 flex justify-center gap-4 lg:justify-start">
-                        <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                            href="#" target="_blank" rel="noreferrer">
+                        <a class="text-white transition hover:text-white/75" href="#" target="_blank" rel="noreferrer">
                             <span class="sr-only"> Facebook </span>
 
                             <svg class="size-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -201,8 +200,7 @@
                             </svg>
                         </a>
 
-                        <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                            href="#" target="_blank" rel="noreferrer">
+                        <a class="text-white transition hover:text-white/75" href="#" target="_blank" rel="noreferrer">
                             <span class="sr-only"> Instagram </span>
 
                             <svg class="size-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -212,8 +210,7 @@
                             </svg>
                         </a>
 
-                        <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                            href="#" target="_blank" rel="noreferrer">
+                        <a class="text-white transition hover:text-white/75" href="#" target="_blank" rel="noreferrer">
                             <span class="sr-only"> Twitter </span>
 
                             <svg class="size-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -222,145 +219,69 @@
                             </svg>
                         </a>
 
-                        <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                            href="#" target="_blank" rel="noreferrer">
-                            <span class="sr-only"> GitHub </span>
-
-                            <svg class="size-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                                <path fill-rule="evenodd"
-                                    d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
-
-                        <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                            href="#" target="_blank" rel="noreferrer">
-                            <span class="sr-only"> Dribbble </span>
-
-                            <svg class="size-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                                <path fill-rule="evenodd"
-                                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10c5.51 0 10-4.48 10-10S17.51 2 12 2zm6.605 4.61a8.502 8.502 0 011.93 5.314c-.281-.054-3.101-.629-5.943-.271-.065-.141-.12-.293-.184-.445a25.416 25.416 0 00-.564-1.236c3.145-1.28 4.577-3.124 4.761-3.362zM12 3.475c2.17 0 4.154.813 5.662 2.148-.152.216-1.443 1.941-4.48 3.08-1.399-2.57-2.95-4.675-3.189-5A8.687 8.687 0 0112 3.475zm-3.633.803a53.896 53.896 0 013.167 4.935c-3.992 1.063-7.517 1.04-7.896 1.04a8.581 8.581 0 014.729-5.975zM3.453 12.01v-.26c.37.01 4.512.065 8.775-1.215.25.477.477.965.694 1.453-.109.033-.228.065-.336.098-4.404 1.42-6.747 5.303-6.942 5.629a8.522 8.522 0 01-2.19-5.705zM12 20.547a8.482 8.482 0 01-5.239-1.8c.152-.315 1.888-3.656 6.703-5.337.022-.01.033-.01.054-.022a35.318 35.318 0 011.823 6.475 8.4 8.4 0 01-3.341.684zm4.761-1.465c-.086-.52-.542-3.015-1.659-6.084 2.679-.423 5.022.271 5.314.369a8.468 8.468 0 01-3.655 5.715z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                        </a>
                     </div>
                 </div>
 
-                <div class="grid grid-cols-1 gap-8 text-center lg:grid-cols-3 lg:text-left">
+                <div class="flex  justify-center gap-20  lg:ml-auto mt-12 md:mt-0 order-1 md:order-2">
+
+
                     <div>
-                        <strong class="font-medium text-gray-900 dark:text-white"> Services </strong>
+                        <strong class="font-semibold text-xl text-white"> Quick Links </strong>
 
                         <ul class="mt-6 space-y-1">
                             <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    Marketing
-                                </a>
+                                <a class="text-white text-base font-normal transition hover:text-white/75" href="#">
+                                    Home </a>
                             </li>
 
                             <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    Graphic Design
-                                </a>
+                                <a class="text-white text-base font-normal transition hover:text-white/75" href="#">
+                                    About </a>
                             </li>
 
                             <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    App Development
-                                </a>
+                                <a class="text-white text-base font-normal transition hover:text-white/75" href="#"> Our
+                                    Team </a>
                             </li>
 
                             <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    Web Development
-                                </a>
+                                <a class="text-white text-base font-normal transition hover:text-white/75" href="#">
+                                    Gallery </a>
                             </li>
                         </ul>
                     </div>
 
                     <div>
-                        <strong class="font-medium text-gray-900 dark:text-white"> About </strong>
+                        <strong class="font-semibold text-xl text-white"> Support </strong>
 
                         <ul class="mt-6 space-y-1">
                             <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    About
-                                </a>
+                                <a class="text-white text-base font-normal  transition hover:text-white/75" href="#">
+                                    FAQs </a>
                             </li>
 
                             <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    Careers
-                                </a>
+                                <a class="text-white text-base font-normal transition hover:text-white/75" href="#">
+                                    Contact </a>
                             </li>
 
                             <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    History
-                                </a>
-                            </li>
-
-                            <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    Our Team
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div>
-                        <strong class="font-medium text-gray-900 dark:text-white"> Support </strong>
-
-                        <ul class="mt-6 space-y-1">
-                            <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    FAQs
-                                </a>
-                            </li>
-
-                            <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    Contact
-                                </a>
-                            </li>
-
-                            <li>
-                                <a class="text-gray-700 transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75"
-                                    href="#">
-                                    Live Chat
-                                </a>
+                                <a class="text-white text-base font-normal transition hover:text-white/75" href="#">
+                                    Live Chat </a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="mt-16 border-t border-gray-100 pt-8 dark:border-gray-800">
-                <p class="text-center text-xs/relaxed text-gray-500 dark:text-gray-400">
-                    © Company 2022. All rights reserved.
-
-                    <br />
-
-                    Created with
-                    <a href="#"
-                        class="text-gray-700 underline transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75">Laravel</a>
-                    and
-                    <a href="#"
-                        class="text-gray-700 underline transition hover:text-gray-700/75 dark:text-white dark:hover:text-white/75">Laravel
-                        Livewire</a>.
+            <div class="mt-16 border-t border-gray-100 pt-8">
+                <p class="text-center text-lg/relaxed text-white/90">
+                    ©blessingchildspecialschool. All rights reserved.
                 </p>
             </div>
         </div>
     </footer>
+
 
 
     <!-- Back to Top Button -->
