Image hover soccial block done

--- a/sami/index.html
+++ b/sami/index.html
@@ -13,7 +13,7 @@
 <body class="font-nunito">
 
     <!-- Top Contact Bar -->
-    <div class="bg-blue-600 text-white py-2">
+    <div class="bg-[#0072B8] text-white py-2">
         <div class="holder">
             <div class="flex flex-col md:flex-row justify-between items-center text-sm">
                 <!-- Address -->
@@ -44,30 +44,30 @@
     </div>
 
     <!-- Main Navigation Header -->
-    <header class="bg-black md:bg-white shadow-md">
+    <header class="bg-white shadow-md">
         <div class="holder">
             <div class="flex justify-between items-center py-2 md:py-4">
                 <!-- Logo -->
                 <div class="flex items-center">
-                    <h1 class="text-3xl font-bold text-gray-900">
+                    <h1 class="text-3xl font-bold text-black">
                         <img src="/assets/image/logo.png" alt="logo" class="md:h-20 h-12 md:w-20 w-12 object-cover ">
                     </h1>
                 </div>
 
                 <!-- Navigation (Desktop) -->
                 <nav class="hidden md:flex space-x-8">
-                    <a href="#" class="text-blue-600 font-semibold">Home</a>
-                    <a href="#about" class="text-gray-700 hover:text-blue-600 transition">About</a>
-                    <a href="#teachers" class="text-gray-700 hover:text-blue-600 transition">Teacher</a>
-                    <a href="#classes" class="text-gray-700 hover:text-blue-600 transition">Courses</a>
-                    <a href="#pricing" class="text-gray-700 hover:text-blue-600 transition">Pricing</a>
-                    <a href="#blog" class="text-gray-700 hover:text-blue-600 transition">Blog</a>
-                    <a href="#contact" class="text-gray-700 hover:text-blue-600 transition">Contact</a>
+                    <a href="#" class="text-[#0072B8] font-semibold">Home</a>
+                    <a href="#about" class="text-gray-700 hover:text-[#0072B8] transition">About</a>
+                    <a href="#teachers" class="text-gray-700 hover:text-[#0072B8] transition">Teacher</a>
+                    <a href="#classes" class="text-gray-700 hover:text-[#0072B8] transition">Courses</a>
+                    <a href="#pricing" class="text-gray-700 hover:text-[#0072B8] transition">Pricing</a>
+                    <a href="#blog" class="text-gray-700 hover:text-[#0072B8] transition">Blog</a>
+                    <a href="#contact" class="text-gray-700 hover:text-[#0072B8] transition">Contact</a>
                 </nav>
 
                 <!-- Mobile menu button -->
                 <button id="menu-btn"
-                    class="md:hidden text-[#6c757d] text-2xl focus:outline-none flex justify-center items-center gap-3">
+                    class="md:hidden text-black text-2xl focus:outline-none flex justify-center items-center gap-3">
                     <i class="fas fa-bars text-2xl"></i>
 
                 </button>
@@ -75,15 +75,15 @@
         </div>
 
         <!-- Mobile Menu -->
-        <div id="mobile-menu" class="md:hidden bg-black shadow-md">
-            <nav class="flex flex-col space-y-4 px-6 py-4">
-                <a href="#" class="text-blue-600 font-semibold">Home</a>
-                <a href="#about" class="text-white hover:text-blue-600 transition">About</a>
-                <a href="#teachers" class="text-white hover:text-blue-600 transition">Teacher</a>
-                <a href="#classes" class="text-white hover:text-blue-600 transition">Courses</a>
-                <a href="#pricing" class="text-white hover:text-blue-600 transition">Pricing</a>
-                <a href="#blog" class="text-white hover:text-blue-600 transition">Blog</a>
-                <a href="#contact" class="text-white hover:text-blue-600 transition">Contact</a>
+        <div id="mobile-menu" class="md:hidden text-black shadow-md">
+            <nav class="flex flex-col space-y-4 px-1 py-4">
+                <a href="#" class="border-b px-4 py-1 text-[#0072B8] font-semibold">Home</a>
+                <a href="#about" class="border-b px-4 py-1 hover:text-[#0072B8] transition">About</a>
+                <a href="#teachers" class="border-b px-4 py-1 hover:text-[#0072B8] transition">Teacher</a>
+                <a href="#classes" class="border-b px-4 py-1 hover:text-[#0072B8] transition">Courses</a>
+                <a href="#pricing" class="border-b px-4 py-1 hover:text-[#0072B8] transition">Pricing</a>
+                <a href="#blog" class="border-b px-4 py-1 hover:text-[#0072B8] transition">Blog</a>
+                <a href="#contact" class="border-b px-4 py-1 hover:text-[#0072B8] transition">Contact</a>
             </nav>
         </div>
     </header>
@@ -292,7 +292,7 @@
 
             </div>
         </div>
-    </section>ßß
+    </section>
 
 
     <script src="/assets/js/main.js">
