--- a/afzal/index.html
+++ b/afzal/index.html
@@ -70,7 +70,9 @@
     </header>
 
     <!-- Hero Slider Section -->
-    <Section>slider</Section>
+    <Section>
+
+    </Section>
 
     <!-- Services Section -->
     <section>Services</section>
@@ -160,7 +162,7 @@
 
     <!-- Footer -->
     <footer class="bg-blue-600">
-        <div class="mx-auto max-w-screen-xl px-4 pt-16 pb-8 sm:px-6 lg:px-8">
+        <div class=" holder pt-16 pb-8 ">
             <div class="mx-auto max-w-md">
                 <strong class="block text-center font-bold text-3xl text-white sm:text-3xl">
                     Want us to email you with the latest blockbuster news?
