Banner slider add

--- a/afzal/index.html
+++ b/afzal/index.html
@@ -72,6 +72,40 @@
 
     <!-- Hero Slider Section -->
     <Section>
+        <!-- Swiper -->
+        <div class="swiper bannerSlider h-[600px] ">
+            <div class="swiper-wrapper ">
+                <!-- Slides -->
+                <div class="swiper-slide  !flex flex-col items-center justify-center bg-no-repeat bg-cover bg-center relative z-0"
+                    style="background-image: url(https://preview.colorlib.com/theme/kiddos/images/bg_1.jpg);">
+                    <div class="overlay"></div>
+                    <div class="holder text-center relative z-10">
+                        <h2 class=" text-4xl lg:text-6xl font-extrabold text-white mb-8 ">Perfect Learned<span
+                                class="block"> For Your Child</span></h2>
+                        <a href="#"
+                            class="bg-[#f1453d] py-4 px-6 rounded-[40px] text-white text-base font-normal cursor-pointer transition hover:bg-red-800">Read
+                            More</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide  !flex flex-col items-center justify-center bg-no-repeat bg-cover bg-center relative z-0"
+                    style="background-image: url(https://preview.colorlib.com/theme/kiddos/images/bg_2.jpg);">
+                    <div class="overlay"></div>
+                    <div class="holder text-center relative z-10">
+                        <h2 class=" text-4xl lg:text-6xl font-extrabold text-white mb-8 ">Perfect Learned<span
+                                class="block"> For Your Child</span></h2>
+                        <a href="#"
+                            class="bg-[#f1453d] py-4 px-6 rounded-[40px] text-white text-base font-normal cursor-pointer transition hover:bg-red-800">Read
+                            More</a>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <!-- Optional pagination -->
+            <div class="swiper-pagination"></div>
+        </div>
 
     </Section>
 
