Update color scheme for header and footer; change button background color in the contact form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="font-nunito">
 
   <!-- Top Contact Bar -->
-  <div class="bg-[#0072B8] text-white py-2">
+  <div class="bg-blue-50 text-white py-2">
     <div class="holder">
       <div class="flex flex-col md:flex-row justify-between items-center text-sm">
         <!-- Address -->
@@ -815,7 +815,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-[#0072B8]">
+  <footer class="bg-blue-50">
     <div class=" holder pt-16 pb-8 ">
       <div class="mx-auto max-w-md">
         <strong class="block text-center font-bold text-3xl text-white sm:text-3xl">
@@ -830,7 +830,7 @@
               type="email" placeholder="blessingchildspecialschool@gmail.com" />
 
             <button
-              class="absolute end-1 top-1/2 -translate-y-1/2 rounded-full bg-[#0072B8] px-5 py-3 text-lg/leading-none font-medium text-white transition hover:bg-blue-700">
+              class="absolute end-1 top-1/2 -translate-y-1/2 rounded-full bg-blue-50 px-5 py-3 text-lg/leading-none font-medium text-white transition-all hover:bg-blue-700">
               Submit
             </button>
           </div>
