Add FAQ section with collapsible details to index and output CSS

--- a/index.html
+++ b/index.html
@@ -730,6 +730,67 @@
   </section>
   <!-- Testimonial block -->
 
+
+  <!-- FAQ Section -->
+  <section class="py-16">
+    <div class="holder space-y-4">
+      <details class="group [&_summary::-webkit-details-marker]:hidden" open>
+        <summary
+          class="flex items-center justify-between gap-1.5 rounded-md border border-gray-100 bg-gray-50 p-4 text-black">
+          <h2 class=" text-xl font-medium">Lorem ipsum dolor sit amet consectetur adipisicing?</h2>
+
+          <svg class="size-5 shrink-0 transition-transform duration-300 group-open:-rotate-180"
+            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+          </svg>
+        </summary>
+
+        <p class="px-4 pt-4 text-black/80 text-base font-normal">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab hic veritatis molestias culpa in,
+          recusandae laboriosam neque aliquid libero nesciunt voluptate dicta quo officiis explicabo
+          consequuntur distinctio corporis earum similique!
+        </p>
+      </details>
+
+      <details class="group [&_summary::-webkit-details-marker]:hidden">
+        <summary
+          class="flex items-center justify-between gap-1.5 rounded-md border border-gray-100 bg-gray-50 p-4 text-black">
+          <h2 class="text-xl font-medium">Lorem ipsum dolor sit amet consectetur adipisicing?</h2>
+
+          <svg class="size-5 shrink-0 transition-transform duration-300 group-open:-rotate-180"
+            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+          </svg>
+        </summary>
+
+        <p class="px-4 pt-4 text-black/80 text-base font-normal">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab hic veritatis molestias culpa in,
+          recusandae laboriosam neque aliquid libero nesciunt voluptate dicta quo officiis explicabo
+          consequuntur distinctio corporis earum similique!
+        </p>
+      </details>
+
+      <details class="group [&_summary::-webkit-details-marker]:hidden">
+        <summary
+          class="flex items-center justify-between gap-1.5 rounded-md border border-gray-100 bg-gray-50 p-4 text-black">
+          <h2 class="text-xl font-medium">Lorem ipsum dolor sit amet consectetur adipisicing?</h2>
+
+          <svg class="size-5 shrink-0 transition-transform duration-300 group-open:-rotate-180"
+            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+          </svg>
+        </summary>
+
+        <p class="px-4 pt-4 text-black/80 text-base font-normal">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab hic veritatis molestias culpa in,
+          recusandae laboriosam neque aliquid libero nesciunt voluptate dicta quo officiis explicabo
+          consequuntur distinctio corporis earum similique!
+        </p>
+      </details>
+    </div>
+  </section>
+  <!-- FAQ Section End-->
+
   <section>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
 
@@ -955,9 +1016,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <!-- <script src="/assets/js/main.js"></script> -->
-  <script src="/assets/js/main.js">
-
-  </script>
+  <script src="/assets/js/main.js"></script>
 
 </body>
 
