Refactor HTML structure and enhance CSS grid classes for better layout management

--- a/afzal/index.html
+++ b/afzal/index.html
@@ -117,7 +117,8 @@
         <div class="overlay"></div>
         <div class="holder text-center absolute z-10 space-y-5">
             <h1 class=" text-white text-4xl md:text-5xl font-black ">About Us</h1>
-            <p class="text-white text-lg font-medium [&>a>span]:transition-all [&>a>span:hover]:text-blue-600 [&>a>span]:mr-3">
+            <p
+                class="text-white text-lg font-medium [&>a>span]:transition-all [&>a>span:hover]:text-blue-600 [&>a>span]:mr-3">
                 <a href="index.html"> <span>Home</span> <i class="fa-solid fa-angle-right"></i></a>
                 <span class=" ml-3">About us</span>
             </p>
@@ -180,21 +181,22 @@
         </div>
     </section>
 
-
-    <!-- What We Offer Section -->
-    <section>What We Offer</section>
-
-    <!-- Teaching Section -->
-    <section>Teaching</section>
-
-    <!-- Teachers Section -->
-    <section>Teachers</section>
-
-    <!-- Courses Section -->
-    <section>Courses</section>
-
-    <!-- Experience Section -->
-    <section>Experience</section>
+    <!-- Contact form -->
+    <section class="py-16">
+        <div class="holder">
+            <div class="grid grid-cols-1 lg:grid-cols-5 items-center lg:gap-16 gap-8 ">
+                <div class="lg:col-span-3 text-center [&>iframe]:w-full [&>iframe]:h-[350px] [&>iframe]:md:h-[450px]">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13521.912482203086!2d-81.0953474!3d32.0833613!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fb9e60d9641959%3A0x3973d9be39472963!2sJW%20Marriott%20Savannah%20Plant%20Riverside%20District!5e0!3m2!1sen!2sus!4v1731603309277!5m2!1sen!2sus"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="lg:col-span-2">
+                    Contact form
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Testimonials Section -->
     <section class="py-20 bg-gray-50">
