Update Google Maps iframe source to reflect new location for Blessing Child Special School

--- a/afzal/index.html
+++ b/afzal/index.html
@@ -187,7 +187,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-5 items-center lg:gap-16 gap-8 ">
                 <div class="lg:col-span-3 text-center [&>iframe]:w-full [&>iframe]:h-[350px] [&>iframe]:md:h-[450px]">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13521.912482203086!2d-81.0953474!3d32.0833613!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fb9e60d9641959%3A0x3973d9be39472963!2sJW%20Marriott%20Savannah%20Plant%20Riverside%20District!5e0!3m2!1sen!2sus!4v1731603309277!5m2!1sen!2sus"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1690.4464151856846!2d90.44702656658654!3d23.762838260655727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c713efa08407%3A0x4a3f52f5873e53b9!2sBlessing%20Child%20Special%20School!5e0!3m2!1sen!2sbd!4v1758382543274!5m2!1sen!2sbd"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
